--- a/geral.css
+++ b/geral.css
@@ -14,7 +14,7 @@
     width: 100%;
     height: 100px;
     background-color:var(--cor_de_fundo);
-    padding: 20px;
+    color:#221703;
 }
 
 nav ul {
