--- a/geral.css
+++ b/geral.css
@@ -22,6 +22,8 @@ nav ul {
     margin: 0;
     padding: 0;
     text-align: center;
+    background-color: #ffcc66;
+    color: #221703;
   }
   
   nav li {
