--- a/geral.css
+++ b/geral.css
@@ -60,6 +60,8 @@ nav ul {
     background-color: var(--cor_de_fundo);
     width: 100%;
     height: 80px;
+     margin-top: 50px;
+    
 }
 .conteudo {
     width: 100%;
